--- a/style.css
+++ b/style.css
@@ -11,16 +11,14 @@ html {
 
 .gameButtons {
 
-  position: absolute;
-  margin-top: 5%;
-  margin-left: 3%;
-  margin-right:3%;
   float:left;
   width:25%;
+  height: 71%;
   background-color: rgba(0, 0, 0, .08);
   border-radius: 25px;
   padding: 20px;
   min-width: 220px;
+  margin-right: 2%;
 }
 
 
@@ -55,6 +53,8 @@ ul {
   padding: 0;
 }
 
+
+/* fuck go back */
 .page {
   height: 100%;
   position: absolute;
@@ -108,11 +108,9 @@ ul {
 
 .chatContainer {
     background: white;
-    width: 25%;
+    width: 40%;
     height: 71%;
     border-radius: 6px;
-    float: right;
-    margin: 1% 3% 1% 1%;
     padding: 10px;
     text-align: center;
     box-shadow: 5px 5px 10px #888888;
